--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>tv.twitch.gutitubo</groupId>
   <artifactId>LastManStanding</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.6</version>
   <build>
    <plugins>
      <plugin>
